2015-03-31: Release of NaN 2.7.2

- bug fix in nanstd.m 
- cross-compiler issues in histo_mex
- fix Makefile for use with Matlab
- address compatibility issue on debian/jessie
- minor issues (some compiler warnings are addressed)


2015-01-24: Release of NaN 2.7.1

- support for MacOSX added
  (tested on Homebrew Octave)


2015-01-17: Release of NaN 2.7.0

Fix compatibility issues with core functions in Matlab and Octave
- zscore: order of input output argument
- mahal gives now same result than matlab
- sumskipnan allows DIM argument larger than ndims
- a few minor issues

For changes of previous releases see: 
  http://pub.ist.ac.at/~schloegl/matlab/NaN/CHANGELOG